[package]
name = "login-portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.2", features = ["std"] }
axum = "0.7.3"
axum-login = "0.12.0"
clap = { version = "4.4.14", features = ["derive"] }
envy = "0.4.2"
mime_guess = "2.0.4"
rpassword = "7.3.1"
rust-embed = "8.2.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "rt", "macros", "net"] }
